# pyf.aggregator

./: .gitignore  AGENTS.md  AUTHORS.rst  CHANGES.rst  CLAUDE.md  CONTRIBUTING.rst  Dockerfile  E2E-VERIFICATION.md  Makefile  PLAN-pyfa-harmonization.md  README.md  README.rst  VERIFICATION_RESULTS.md  api.http  delete-so-apikeys.sh  docker-compose.yml  e2e_verification.py  example.env  experiments.ipynb  migrate_version_sortable.py  mx.ini  project-notes.md  pyf_aggregator.py  pyf_build_index.py  pyf_test_search.py  pyproject.toml  run_verification.py  run_verification_simple.py  setup.cfg  test_error_handling.py  test_profile_loading.py  update-schema.sh
.github/workflows/: ci.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2026-01-23-default-profile-env/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-01-28-version-sortable-tests/: plan.md  shape.md
agent-os/specs/2026-01-29-html-heading-fixer/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-01-29-weighted-search-fields/: plan.md  references.md  shape.md  standards.md
agent-os/standards/: index.yml
agent-os/standards/testing/: test-writing.md
docs/: api_reference.rst  cli_reference.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst  workflows.rst
hooks/: stop-lint-test.sh
src/pyf/aggregator/: __init__.py  bigquery_discovery.py  cli.py  cli_utils.py  config.py  db.py  fetcher.py  indexer.py  logger.py  main.py  npm_fetcher.py  npm_indexer.py  npm_main.py  profiles.py  profiles.yaml  queue.py  ratelimit.py  typesense_util.py  update_typesense.py
src/pyf/aggregator/enrichers/: downloads.py  github.py  health_calculator.py  maintainers.py
src/pyf/aggregator/plugins/: __init__.py  curated.py  curated.yaml  description_splitter.py  framwork_versions.py  github.py  health_score.py  python_versions.py  rst_to_html.py  screenshot_detector.py  version.py  version_slicer.py
tests/: __init__.py  conftest.py  test_bigquery_discovery.py  test_cli.py  test_cli_default_profile.py  test_description_splitter.py  test_downloads_enricher.py  test_fetcher.py  test_github_enricher.py  test_health_score.py  test_integration_profiles.py  test_live_pypi_sorting.py  test_main.py  test_maintainers_enricher.py  test_npm_fetcher.py  test_npm_indexer.py  test_profiles.py  test_queue.py  test_ratelimit.py  test_rst_to_html.py  test_screenshot_detector.py  test_typesense_util.py  test_version_sortable_integration.py
