[metadata]
name = pyf.aggregator
description = Python Package Filter Aggregator
long_description = file: README.rst, CHANGES.rst,
keywords =
author =
author_email =
url = https://pypi.python.org/pypi/pyf.aggregator
license = GNU General Public License v2 (GPLv2)
classifiers =
    Framework :: Pyramid
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
install_requires =
    lxml
    PyYAML
    requests
    PyGithub
    setuptools
    typesense
    python-dotenv
    docutils
namespace_packages =
    pyf
package_dir =
    = src
packages = find:
zip_safe = False

[options.packages.find]
where =
    src

[options.extras_require]
testing =
    responses
    webtest
    pytest
    pytest-cov
dev =
    pdbpp

[options.entry_points]
console_scripts =
    pyfaggregator = pyf.aggregator.main:main
    pyfupdater = pyf.aggregator.typesense_util:main
    pyfgithub = pyf.aggregator.enrichers.github:main

[test]
test_suite = pyf.aggrator.tests
[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes

[isort]
# black compatible Plone isort rules:
profile = black
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
